# cloud-computing-coursework

./: README.md
e-commerce/: README.md  package-lock.json  package.json
e-commerce/src/app/: layout.js  page.js
e-commerce/src/app/account/: page.js
e-commerce/src/app/admin/: page.js
e-commerce/src/app/admin/items/: page.js
e-commerce/src/app/admin/items/new/: page.js
e-commerce/src/app/admin/users/: page.js
e-commerce/src/app/api/auth/login/: route.js
e-commerce/src/app/api/items/: route.js
e-commerce/src/app/api/items/[id]/: route.js
e-commerce/src/app/api/items/[id]/reviews/: route.js
e-commerce/src/app/api/users/: route.js
e-commerce/src/app/api/users/[id]/: route.js
e-commerce/src/app/items/: page.js
e-commerce/src/app/items/[id]/: ReviewForm.js  page.js
e-commerce/src/app/items/category/[name]/: page.js
e-commerce/src/app/login/: page.js
e-commerce/src/components/: Navbar.js
e-commerce/src/context/: AuthContext.js
e-commerce/src/lib/: auth.js  db.js  withAuth.js
e-commerce/src/models/: Item.js  Review.js  User.js
k8s-microservices/: README.md
mapreduce-spotify/: README.md  pyproject.toml  results.json
mapreduce-spotify/src/cloud_hw3/: app.py  config.py  main.py  tasks.py  utils.py
